--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,11 @@
     <string name="confirm_code">Мы отправим на него код подтверждения</string>
     <string name="mobile_phone">Мобильный телефон</string>
     <string name="next">Далее</string>
+
     <string name="terms_cooperation">Нажимая «Далее», я соглашаюсь с
         <a href="https://google.com">Пользовательским соглашением</a>, а также с обработкой моей персональной информации на условиях <a href="https://google.com">Политики конфиденциальности</a>
     </string>
+
     <string name="input_code">Введите код из СМС</string>
     <string name="retry_code_send">Отправить еще раз</string>
     <string name="who_are_you">Как вас зовут?</string>
@@ -27,7 +29,7 @@
     <string name="offer_price">Предложите цену</string>
     <string name="offerPrice">Предложить цену</string>
     <string name="offer_price_text">Чтобы заинтересовать водителей, устанавливайте справедливую цену</string>
-    <string name="getdriver">Вызвать машину</string>
+    <string name="getDriver">Вызвать машину</string>
     <string name="add_payment">Добавить карту</string>
     <string name="addCard">Добавить карту</string>
     <string name="addBankCard">Добавление карты</string>
@@ -36,12 +38,16 @@
     <string name="numberBankCard">Номер карты</string>
     <string name="ready">Готово</string>
     <string name="commentForDriver">Комментарий для водителя</string>
-    <string name="positive">Выгодно</string>
-    <string name="negative">Невыгодно</string>
     <string name="errorCode">Неверный код</string>
     <string name="showPhone">Мы отправили его на номер</string>
     <string name="retrySms">Повторить СМС</string>
     <string name="retrySmsIn">Повторить СМС через</string>
-
+    <string name="recommendDownPrice">Рекомендуем повысить цену</string>
+    <string name="cancelRide">Отменить поездку</string>
+    <string name="reasonCancel">Причина отмены</string>
+    <string name="accept">Принять</string>
+    <string name="offerYourPrice">Предлагаем вашу цену водителям, ожидайте</string>
+    <string name="driverInWay">Водитель уже в пути</string>
+    <string name="driverArrived">Водитель приехал</string>
 
 </resources>
