--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,5 +75,9 @@
     <string name="logout">Выйти из профиля</string>
     <string name="email">Почта (необязательно)</string>
     <string name="fullName">Имя и фамилия</string>
+    <string name="title_activity_main2">Main2Activity</string>
+    <string name="tab_text_1">Tab 1</string>
+    <string name="tab_text_2">Tab 2</string>
+    <string name="createRegularRide">Создать регулярную поездку</string>
 
 </resources>
