--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -126,5 +126,6 @@
     <string name="whatHappens">Что случилось?</string>
     <string name="send">Отправить</string>
     <string name="yourComment">Ваш комментарий (необязательно)</string>
+    <string name="passangerCancelledRide">Пассажир отменил поездку</string>
 
 </resources>
