--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -213,6 +213,8 @@
     <string name="everyDay">Ежедневно</string>
     <string name="selectDays">Выбрать дни</string>
     <string name="workDays">По будням</string>
+    <string name="ACTIVE">АКТИВНЫЕ</string>
+    <string name="ARCHIVE">АРХИВИРОВАННЫЕ</string>
 
 
 </resources>
