add loading animation on create ride

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -227,6 +227,7 @@
     <string name="ARCHIVE">АРХИВИРОВАННЫЕ</string>
     <string name="forWatingPassanger">за простой</string>
     <string name="paymentForCancel">Вам был зачислен платеж на сумму</string>
+    <string name="waitPlease">Пожалуйста, подождите</string>
 
 
 </resources>
