add: socket to chat (in driver), cancel offer (in driver), correct restore ride

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -243,6 +243,7 @@
     <string name="checkOffersFromDriver">Посмотрите предложения водителей</string>
     <string name="selectBestOffer">Выберите лучшее предложение</string>
     <string name="newMessage">Новое сообщение</string>
+    <string name="activeRide">Активная поездка</string>
 
 
 </resources>
